--- a/style.css
+++ b/style.css
@@ -1,7 +1,32 @@
-h1{
+h1,h2{
     text-align: center;
 }
 
 .container{
     text-align: center;
 }
+
+.g2{
+    text-align: center;
+}
+
+		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
